
2019-10-29  Ron Norman <rjn@inglenet.com>

	* fileio.c: Checks for filetype_OPTIONS (eg. IX, SQ, RL)
	         and sets options defined
			 If no filetype_OPTIONS then it checks for IO_OPTIONS
			 Then it checks IO_filename for options

			 Implement support for an option of format=auto which
			 indicates fileio should assign the correct INDEXED file
			 handler based on the existing file format

2019-10-26  Ron Norman <rjn@inglenet.com>

	* fileio.c: work on handling file definition parameters in IO_filename
	          RELATIVE file at end-of-file now returns status 10 
			  when ACCESS SEQUENTIAL, otherwise status 23

2019-10-25  Ron Norman <rjn@inglenet.com>

	* fileio.c: split read/write dictionary routines for future uses
	          RELATIVE file now returns status 14 for end of file
	* fisam.c Fixed to use correct index of xISAM file
	      when only part of the indexed are defined in COBOL
		  and keycheck=off

2019-10-25  Edward Hart <edward.dan.hart@gmail.com>

	* numeric.c (cob_add_int): fixed floating-point case (bug #603).

2019-10-24  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (internal_nanosleep): added a new parameter specifying
	  "round to minimal" to be able to use it for locking_timout
	* common.c, common.h: replaced non-system function cob_sys_sleep_msec
	  with new internal cob_sleep_msec
	* fileio.c, fisam.c, fbdb.c: adjusted cob_sys_sleep_msec->cob_sleep_msec
	* flmdb.c (local_file): fixed SIGSEGV if proc/partitions is not
	  accessible and allow the check to be skipped via MDB_NO_LOCAL_FS_CHK

2019-10-24  Ron Norman <rjn@inglenet.com>

	* flmdb.c updated to be more portable

2019-10-21  Ron Norman <rjn@inglenet.com>

	* fileio.c Update for multiple xISAM handlers
	* call.c: added cob_load_lib to load xISAM handler
	* common.c,common.h: Updated for multiple xISAM handlers
	* fisam.c Updated for multiple xISAM handlers
	* Makefile.am Updated for multiple xISAM
	* libcobci.c - builds fisam.c for C-ISAM