@@ -627,17 +627,23 @@
 # or keyword=true or keyword=false.  The valid keywords are:
 # Keyword       Meaning
 # =========     ======================================================
+# type=xx       Set file organization where 'xx' is one of
+#               IX = INDEXED, SQ = SEQUENTIAL, RL = RELATIVE
+#               LS = LINE SEQUENTIAL, LA = LINE ADVANCING
 # mf            Set file to Micro Focus compatible format
 # gc            Set to original GNU Cobol default format
+# recsz         The size for fixed size record file
+# maxsz         Maximum record size for variable length records
+# minsz         Minimum record size for variable length records
 # ls_nulls      Do NUL insertion before characters less than a SPACE, 
 #               Default: false
 # ls_validate   Validate data for LINE Sequential Files, Default: true
 # crlf          Lines end with CR LF (Windows format for text files)
 # lf            Lines end with LF (Unix format for text files)
 # sync          Sync all writes to disk
-# B32           Use 32-bit Big-Endian format 'int' or 'size_t' as record length
+# B32           Use 32-bit Big-Endian format 'int' as record length
+# L32           Use 32-bit Little-Endian format 'int' as record length
 # B64           Use 64-bit Big-Endian format 'int' or 'size_t' as record length
-# L32           Use 32-bit Little-Endian format 'int' or 'size_t' as record length
 # L64           Use 64-bit Little-Endian format 'int' or 'size_t' as record length
 # trace         Enable I/O trace when program execution tracing is enabled
 # stats         Write I/O statistic information on file close
@@ -650,8 +656,9 @@
 # share_all     Share file with ALL others
 # share_read    Share file for READ only
 # share_no      Share file with NO others
-# type=xx       IX, SQ, RL, LA, LS
-# format=ixhandler        CISAM,DISAM,VBISAM,BDB,LMDB
+#  ---- For INDEXED files -----
+# format=ixhandler  INDEXED file format: CISAM,DISAM,VBISAM,BDB,LMDB
+# format=auto   INDEXED file format is determined by inspecting the file
 # nkeys=n       number of indexes
 # key1=(loc:len)     loc (zero relative) of key, len of key
 # key2=(loc:len,loc:len ...)     define composite index
